fixed issue where notifications dont show up on mobile and privacy statement so we dont get fined millions of dollars

--- a/imports/styles/main.normal.less
+++ b/imports/styles/main.normal.less
@@ -50,7 +50,7 @@ html, body, #app{
 	box-sizing: border-box;
 	overflow-x: hidden;
 	background-color: @dark-grey;
-	height: 100vh;
+	// height: 100vh;
 }
 
 input:focus, textarea:focus, button:focus {
